Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -61,5 +61,6 @@
   "mn4:20.4": "Lors de telles nuits, si je devais résider dans ces lieux sacrés comme les ermitages, les sanctuaires forestiers ou les arbres vénérés, qui sont effrayants et font dresser les cheveux sur la tête, il est fort possible que j’y rencontre la peur et l’effroi. › ",
   "mn4:20.5": "Quelque temps plus tard, c’est ce que j’ai fait. ",
   "mn4:20.8": "Alors que j’y résidais, un cerf passa, ou un paon cassa une branche, ou le vent agita les feuilles. ",
-  "mn4:20.9": "Puis j’ai pensé, "
+  "mn4:20.9": "Puis j’ai pensé, ",
+  "mn4:20.10": "‹ Voici certainement cette peur et cet effroi qui arrivent. › "
 }
