Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -62,5 +62,6 @@
   "mn4:20.5": "Quelque temps plus tard, c’est ce que j’ai fait. ",
   "mn4:20.8": "Alors que j’y résidais, un cerf passa, ou un paon cassa une branche, ou le vent agita les feuilles. ",
   "mn4:20.9": "Puis j’ai pensé, ",
-  "mn4:20.10": "‹ Voici certainement cette peur et cet effroi qui arrivent. › "
+  "mn4:20.10": "‹ Voici certainement cette peur et cet effroi qui arrivent. › ",
+  "mn4:20.11": "Puis j’ai pensé, "
 }
