Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -64,5 +64,6 @@
   "mn4:20.9": "Puis j’ai pensé, ",
   "mn4:20.10": "‹ Voici certainement cette peur et cet effroi qui arrivent. › ",
   "mn4:20.11": "Puis j’ai pensé, ",
-  "mn4:20.12": "‹ Pourquoi est-ce que je médite toujours en attendant que cette peur et cet effroi arrivent ? "
+  "mn4:20.12": "‹ Pourquoi est-ce que je médite toujours en attendant que cette peur et cet effroi arrivent ? ",
+  "mn4:20.13": "Et si je faisais face à cette peur et cet effroi qui arrivent à moi dans leur véritable nature, afin de les dissiper telles qu’ils se révèlent. › "
 }
