Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -67,5 +67,6 @@
   "mn4:20.12": "‹ Pourquoi est-ce que je médite toujours en attendant que cette peur et cet effroi arrivent ? ",
   "mn4:20.13": "Et si je faisais face à cette peur et cet effroi qui arrivent à moi dans leur véritable nature, afin de les dissiper telles qu’ils se révèlent. › ",
   "mn4:20.14": "Puis cette peur et cet effroi m’envahirent tandis que je marchais. ",
-  "mn4:20.15": "Je ne me suis ni arrêté, ni assis, ni couché avant d’avoir dissipé cette peur et cet effroi en continuant à marcher. "
+  "mn4:20.15": "Je ne me suis ni arrêté, ni assis, ni couché avant d’avoir dissipé cette peur et cet effroi en continuant à marcher. ",
+  "mn4:20.16": "Puis cette peur et cet effroi m’envahirent tandis que je me tenais debout. "
 }
