--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -68,5 +68,6 @@
   "mn4:20.13": "Et si je faisais face à cette peur et cet effroi qui arrivent à moi dans leur véritable nature, afin de les dissiper telles qu’ils se révèlent. › ",
   "mn4:20.14": "Puis cette peur et cet effroi m’envahirent tandis que je marchais. ",
   "mn4:20.15": "Je ne me suis ni arrêté, ni assis, ni couché avant d’avoir dissipé cette peur et cet effroi en continuant à marcher. ",
-  "mn4:20.16": "Puis cette peur et cet effroi m’envahirent tandis que je me tenais debout. "
+  "mn4:20.16": "Puis cette peur et cet effroi m’envahirent tandis que je me tenais debout. ",
+  "mn4:20.17": "Je n’ai ni marché, et je ne me suis ni assis, ni allongé, avant d’avoir dissipé cette peur et cet effroi en restant debout. "
 }
