Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -72,5 +72,6 @@
   "mn4:20.17": "Je n’ai ni marché, et je ne me suis ni assis, ni allongé, avant d’avoir dissipé cette peur et cet effroi en restant debout. ",
   "mn4:20.18": "Puis cette peur et cet effroi m’envahirent tandis que j’étais assis. ",
   "mn4:20.19": "Je ne me suis ni couché, ni arrêté, ni déplacé avant d’avoir dissipé cette peur et cet effroi en restant assis. ",
-  "mn4:20.20": "Puis cette peur et cet effroi m’envahirent tandis que j’étais couché. "
+  "mn4:20.20": "Puis cette peur et cet effroi m’envahirent tandis que j’étais couché. ",
+  "mn4:20.21": "Je ne me suis ni assis, ni arrêté, ni déplacé avant d’avoir dissipé cette peur et cet effroi en restant couché. "
 }
