--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -73,5 +73,6 @@
   "mn4:20.18": "Puis cette peur et cet effroi m’envahirent tandis que j’étais assis. ",
   "mn4:20.19": "Je ne me suis ni couché, ni arrêté, ni déplacé avant d’avoir dissipé cette peur et cet effroi en restant assis. ",
   "mn4:20.20": "Puis cette peur et cet effroi m’envahirent tandis que j’étais couché. ",
-  "mn4:20.21": "Je ne me suis ni assis, ni arrêté, ni déplacé avant d’avoir dissipé cette peur et cet effroi en restant couché. "
+  "mn4:20.21": "Je ne me suis ni assis, ni arrêté, ni déplacé avant d’avoir dissipé cette peur et cet effroi en restant couché. ",
+  "mn4:21.1": "Il y a des ascètes et des brahmanes qui perçoivent la nuit comme le jour ou le jour comme la nuit. "
 }
