--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -75,5 +75,6 @@
   "mn4:20.20": "Puis cette peur et cet effroi m’envahirent tandis que j’étais couché. ",
   "mn4:20.21": "Je ne me suis ni assis, ni arrêté, ni déplacé avant d’avoir dissipé cette peur et cet effroi en restant couché. ",
   "mn4:21.1": "Il y a des ascètes et des brahmanes qui perçoivent la nuit comme le jour ou le jour comme la nuit. ",
-  "mn4:21.2": "Ces ascètes et brahmanes vivent en plein cœur de l’illusion, dis-je. "
+  "mn4:21.2": "Ces ascètes et brahmanes vivent en plein cœur de l’illusion, dis-je. ",
+  "mn4:21.3": "Je perçois la nuit comme la nuit et le jour comme le jour. "
 }
