Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -77,5 +77,6 @@
   "mn4:21.1": "Il y a des ascètes et des brahmanes qui perçoivent la nuit comme le jour ou le jour comme la nuit. ",
   "mn4:21.2": "Ces ascètes et brahmanes vivent en plein cœur de l’illusion, dis-je. ",
   "mn4:21.3": "Je perçois la nuit comme la nuit et le jour comme le jour. ",
-  "mn4:21.4": "Et s’il y a une personne de qui on peut correctement dire qu’ "
+  "mn4:21.4": "Et s’il y a une personne de qui on peut correctement dire qu’ ",
+  "mn4:21.5": "un être non sujet à l’illusion est apparu dans le monde pour le bien-être et le bonheur du monde, par compassion pour le monde, pour le bénéfice, le bien-être et le bonheur des dieux et des humains, c’est de moi que cela devrait être dit. "
 }
