Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -78,5 +78,6 @@
   "mn4:21.2": "Ces ascètes et brahmanes vivent en plein cœur de l’illusion, dis-je. ",
   "mn4:21.3": "Je perçois la nuit comme la nuit et le jour comme le jour. ",
   "mn4:21.4": "Et s’il y a une personne de qui on peut correctement dire qu’ ",
-  "mn4:21.5": "un être non sujet à l’illusion est apparu dans le monde pour le bien-être et le bonheur du monde, par compassion pour le monde, pour le bénéfice, le bien-être et le bonheur des dieux et des humains, c’est de moi que cela devrait être dit. "
+  "mn4:21.5": "un être non sujet à l’illusion est apparu dans le monde pour le bien-être et le bonheur du monde, par compassion pour le monde, pour le bénéfice, le bien-être et le bonheur des dieux et des humains, c’est de moi que cela devrait être dit. ",
+  "mn4:22-26.1": "Mon énergie était stimulée et inébranlable, mon attention établie et lucide, mon corps était tranquille et non perturbé, et mon esprit était plongé dans la concentration méditative, le samādhi. "
 }
