--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -79,5 +79,6 @@
   "mn4:21.3": "Je perçois la nuit comme la nuit et le jour comme le jour. ",
   "mn4:21.4": "Et s’il y a une personne de qui on peut correctement dire qu’ ",
   "mn4:21.5": "un être non sujet à l’illusion est apparu dans le monde pour le bien-être et le bonheur du monde, par compassion pour le monde, pour le bénéfice, le bien-être et le bonheur des dieux et des humains, c’est de moi que cela devrait être dit. ",
-  "mn4:22-26.1": "Mon énergie était stimulée et inébranlable, mon attention établie et lucide, mon corps était tranquille et non perturbé, et mon esprit était plongé dans la concentration méditative, le samādhi. "
+  "mn4:22-26.1": "Mon énergie était stimulée et inébranlable, mon attention établie et lucide, mon corps était tranquille et non perturbé, et mon esprit était plongé dans la concentration méditative, le samādhi. ",
+  "mn4:22-26.2": "Isolé des plaisirs sensoriels, séparé des états mentaux nuisibles, je suis entré et demeuré dans la première absorption, qui a la félicité et la joie nées de la solitude, tout en plaçant l’esprit et en le maintenant connecté. "
 }
