Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -93,5 +93,6 @@
   "mn4:30.2": "L’ignorance a été détruite et la connaissance est apparue ; l’obscurité a été détruite et la lumière est apparue, ainsi qu’il en va pour celui qui médite avec vigilance, ardeur et détermination. ",
   "mn4:31.1": "Lorsque mon esprit fut ainsi plongé dans la concentration méditative, le samādhi – pur, clair, immaculé, libre de souillures, souple, maniable, stable et imperturbable – j’ai orienté mon esprit vers la connaissance de la fin des souillures. ",
   "mn4:31.2": "J’ai véritablement compris : ‹ Ceci est la souffrance › … ‹ Ceci est l’origine de la souffrance › … ‹ Ceci est la cessation de la souffrance › … ‹ Ceci est la pratique qui mène à la cessation de la souffrance ›. ",
-  "mn4:31.3": "J’ai véritablement compris : ‹ Ce sont les souillures › … ‹ Ceci est l’origine des souillures › … ‹ Ceci est la cessation des souillures › … ‹ Ceci est la pratique qui mène à la cessation des souillures ›. "
+  "mn4:31.3": "J’ai véritablement compris : ‹ Ce sont les souillures › … ‹ Ceci est l’origine des souillures › … ‹ Ceci est la cessation des souillures › … ‹ Ceci est la pratique qui mène à la cessation des souillures ›. ",
+  "mn4:32.1": "Ayant ainsi perçu et discerné, mon esprit a été libéré des souillures du désir sensoriel, du désir de renaissance et de l’ignorance. "
 }
