--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -95,5 +95,6 @@
   "mn4:31.2": "J’ai véritablement compris : ‹ Ceci est la souffrance › … ‹ Ceci est l’origine de la souffrance › … ‹ Ceci est la cessation de la souffrance › … ‹ Ceci est la pratique qui mène à la cessation de la souffrance ›. ",
   "mn4:31.3": "J’ai véritablement compris : ‹ Ce sont les souillures › … ‹ Ceci est l’origine des souillures › … ‹ Ceci est la cessation des souillures › … ‹ Ceci est la pratique qui mène à la cessation des souillures ›. ",
   "mn4:32.1": "Ayant ainsi perçu et discerné, mon esprit a été libéré des souillures du désir sensoriel, du désir de renaissance et de l’ignorance. ",
-  "mn4:32.2": "Lorsqu’il a été libéré, j’ai su qu’il était libéré. "
+  "mn4:32.2": "Lorsqu’il a été libéré, j’ai su qu’il était libéré. ",
+  "mn4:32.3": "J’ai compris que : ‹ Les renaissances sont terminées, le chemin spirituel est achevé, ce qui devait être accompli l’a été, il n’y aura plus de retours à aucun état d’existence. › "
 }
