--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -96,5 +96,6 @@
   "mn4:31.3": "J’ai véritablement compris : ‹ Ce sont les souillures › … ‹ Ceci est l’origine des souillures › … ‹ Ceci est la cessation des souillures › … ‹ Ceci est la pratique qui mène à la cessation des souillures ›. ",
   "mn4:32.1": "Ayant ainsi perçu et discerné, mon esprit a été libéré des souillures du désir sensoriel, du désir de renaissance et de l’ignorance. ",
   "mn4:32.2": "Lorsqu’il a été libéré, j’ai su qu’il était libéré. ",
-  "mn4:32.3": "J’ai compris que : ‹ les renaissances sont terminées, le chemin spirituel est achevé, ce qui devait être accompli l’a été, il n’y aura plus de retours à aucun état d’existence. › "
+  "mn4:32.3": "J’ai compris que : ‹ les renaissances sont terminées, le chemin spirituel est achevé, ce qui devait être accompli l’a été, il n’y aura plus de retours à aucun état d’existence. › ",
+  "mn4:33.1": "Ceci était la troisième connaissance, que j’ai obtenue dans la dernière veille de la nuit. "
 }
