--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -97,5 +97,6 @@
   "mn4:32.1": "Ayant ainsi perçu et discerné, mon esprit a été libéré des souillures du désir sensoriel, du désir de renaissance et de l’ignorance. ",
   "mn4:32.2": "Lorsqu’il a été libéré, j’ai su qu’il était libéré. ",
   "mn4:32.3": "J’ai compris que : ‹ les renaissances sont terminées, le chemin spirituel est achevé, ce qui devait être accompli l’a été, il n’y aura plus de retours à aucun état d’existence. › ",
-  "mn4:33.1": "Ceci était la troisième connaissance, que j’ai obtenue dans la dernière veille de la nuit. "
+  "mn4:33.1": "Ceci était la troisième connaissance, que j’ai obtenue dans la dernière veille de la nuit. ",
+  "mn4:33.2": "L’ignorance a été détruite et la connaissance est apparue ; l’obscurité a été détruite et la lumière est apparue, ainsi qu’il en va pour celui qui médite avec vigilance, ardeur et détermination. "
 }
