--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -100,5 +100,6 @@
   "mn4:33.1": "Ceci était la troisième connaissance, que j’ai obtenue dans la dernière veille de la nuit. ",
   "mn4:33.2": "L’ignorance a été détruite et la connaissance est apparue ; l’obscurité a été détruite et la lumière est apparue, ainsi qu’il en va pour celui qui médite avec vigilance, ardeur et détermination. ",
   "mn4:34.1": "Brahmane, tu pourrais penser : ",
-  "mn4:34.2": "‹ Peut-être que le Maître Gotama n’est pas exempt d’avidité, de haine et d’ignorance, même aujourd’hui, et c’est pourquoi il se retire encore dans des lieux isolés dans les régions sauvages et les forêts. › "
+  "mn4:34.2": "‹ Peut-être que le Maître Gotama n’est pas exempt d’avidité, de haine et d’ignorance, même aujourd’hui, et c’est pourquoi il se retire encore dans des lieux isolés dans les régions sauvages et les forêts. › ",
+  "mn4:34.3": "Mais tu ne devrais pas le voir ainsi. "
 }
