Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -102,5 +102,6 @@
   "mn4:34.1": "Brahmane, tu pourrais penser : ",
   "mn4:34.2": "‹ Peut-être que le Maître Gotama n’est pas exempt d’avidité, de haine et d’ignorance, même aujourd’hui, et c’est pourquoi il se retire encore dans des lieux isolés dans les régions sauvages et les forêts. › ",
   "mn4:34.3": "Mais tu ne devrais pas le voir ainsi. ",
-  "mn4:34.4": "Je vois deux raisons de se retirer dans des lieux isolés dans les régions sauvages et les forêts. "
+  "mn4:34.4": "Je vois deux raisons de se retirer dans des lieux isolés dans les régions sauvages et les forêts. ",
+  "mn4:34.5": "J’envisage pour moi-même une vie heureuse dans cette existence présente et éprouve de la compassion pour les générations futures. » "
 }
