--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -107,5 +107,6 @@
   "mn4:35.1": "« En effet, Maître Gotama a de la compassion pour les générations futures, puisqu’il est un être accompli, un Bouddha pleinement éveillé. ",
   "mn4:35.2": "Excellent, Maître Gotama ! Excellent, Maître Gotama ! ",
   "mn4:35.3": "Comme s’il redressait ce qui est renversé, ou révélait l’occulté, ou indiquait le chemin aux égarés, ou allumait une lampe dans l’obscurité pour que les personnes puissent voir ce qui est là, Maître Gotama a rendu l’enseignement clair de bien des manières. ",
-  "mn4:35.4": "Je prends refuge en le Maître Gotama, en l’enseignement, et en la communauté monastique. "
+  "mn4:35.4": "Je prends refuge en le Maître Gotama, en l’enseignement, et en la communauté monastique. ",
+  "mn4:35.5": "Dès ce jour, que le Maître Gotama se souvienne de moi comme d’un disciple laïc qui a pris refuge pour la vie. » "
 }
