Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/dhp/dhp334-359_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp334-359_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp334-359_translation-de-sabbamitta.json
@@ -69,7 +69,7 @@
   "dhp349:3": "bei ihm wächst das  Verlangen immer weiter ",
   "dhp349:4": "und bindet ihn mit einer starken Fessel. ",
   "dhp350:1": "Doch wer es liebt, die Gedanken zur Ruhe zu bringen, ",
-  "dhp350:2": "und die Wahrnehmung der unattraktiven Natur entwickelt, stets achtsam, ",
+  "dhp350:2": "und die Wahrnehmung des Abstoßenden entwickelt, stets achtsam, ",
   "dhp350:3": "Wird dieses Verlangen sicher beseitigen ",
   "dhp350:4": "und Māras Fesseln durchschneiden. ",
   "dhp351:1": "Wer zuversichtlich und furchtlos ist, ",
