--- a/translation/de/sabbamitta/sutta/an/an1/an1.11-20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.11-20_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "an1.15:1.2": "Wenn man den Geist oberflächlich gebraucht, entsteht Zweifel, und wenn er entstanden ist, wächst er und nimmt zu.“ ",
   "an1.15:1.3": " ",
   "an1.16:1.0": "16 ",
-  "an1.16:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das sinnliches Begehren so am Entstehen hindert oder zu seinem Aufgeben führt, wenn es entstanden ist, wie das Merkmal des Unattraktiven. ",
+  "an1.16:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das sinnliches Begehren so am Entstehen hindert oder zu seinem Aufgeben führt, wenn es entstanden ist, wie das Merkmal des Abstoßenden. ",
   "an1.16:1.2": "Wenn man den Geist für das Merkmal des Unattraktiven gründlich gebraucht, entsteht kein sinnliches Begehren, und wenn es bereits entstanden ist, wird es aufgegeben.“ ",
   "an1.16:1.3": " ",
   "an1.17:1.0": "17 ",
