--- a/translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an4.49:1.3": "Unbeständiges hält man für beständig. ",
   "an4.49:1.4": "Leiden hält man für Glück. ",
   "an4.49:1.5": "Was ohne Selbst ist, hält man für ein Selbst. ",
-  "an4.49:1.6": "Unattraktives hält man für anziehend. ",
+  "an4.49:1.6": "Abstoßendes hält man für schön. ",
   "an4.49:1.7": "Das sind die vier Arten, Wahrnehmung, Denken und Ansicht zu verdrehen. ",
   "an4.49:2.1": "Es gibt vier Arten, Wahrnehmung, Denken und Ansicht geradezurücken. ",
   "an4.49:2.2": "Welche vier? ",
