--- a/translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an4.49:3.1": "Unbeständiges als beständig ansehen, ",
   "an4.49:3.2": "Leiden als Glück, ",
   "an4.49:3.3": "was ohne Selbst ist, als Selbst ",
-  "an4.49:3.4": "und Unattraktives als anziehend – ",
+  "an4.49:3.4": "und Abstoßendes als schön – ",
   "an4.49:3.5": "falsche Ansicht vernichtet die Lebewesen, ",
   "an4.49:3.6": "sie sind verwirrt, ohne Verstand. ",
   "an4.49:4.1": "In Māras Joch eingejocht, finden diese Menschen ",
