Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.49_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "an4.49:6.3": "Wenn er Unbeständiges als unbeständig erkennt, ",
   "an4.49:6.4": "Leiden als Leiden, ",
   "an4.49:7.1": "was ohne Selbst ist, als ohne Selbst ",
-  "an4.49:7.2": "und Unattraktives als unattraktiv – ",
+  "an4.49:7.2": "und Abstoßendes als abstoßend – ",
   "an4.49:7.3": "wenn er rechte Ansicht annimmt, ",
   "an4.49:7.4": "hat er sich über alles Leiden erhoben.“ "
 }
