--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -458,7 +458,7 @@
   "an-name:457.an4-patipadavagga": "Das Kapitel über die Übung ",
   "an-name:458.an4.161": "Kurz ",
   "an-name:459.an4.162": "Ausführlich ",
-  "an-name:460.an4.163": "Unattraktiv ",
+  "an-name:460.an4.163": "Abstoßend ",
   "an-name:461.an4.164": "Geduldig (1) ",
   "an-name:462.an4.165": "Geduldig (2) ",
   "an-name:463.an4.166": "Beide ",
