--- a/translation/de/sabbamitta/sutta/an/an4/an4.169_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.169_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "an4.169:4.7": "Weil die fünf Fähigkeiten stark ausgeprägt sind, erlischt er vollkommen ohne besondere Anstrengung in diesem Leben. ",
   "an4.169:4.8": "So erlischt man vollkommen ohne besondere Anstrengung in diesem Leben. ",
   "an4.169:5.1": "Und wie erlischt man vollkommen ohne besondere Anstrengung, wenn der Körper auseinanderbricht? ",
-  "an4.169:5.2": "Es ist, wenn eine Nonne, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung eintritt und darin verweilt … in die zweite Vertiefung … in die dritte Vertiefung … in die vierte Vertiefung … ",
+  "an4.169:5.2": "Da tritt eine Nonne, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … in die zweite Vertiefung … in die dritte Vertiefung … in die vierte Vertiefung … ",
   "an4.169:5.3": "Sie stützt sich auf diese fünf Kräfte einer Person in Schulung: ",
   "an4.169:5.4": "Vertrauen, Gewissen, Zurückhaltung, Energie und Weisheit. ",
   "an4.169:5.5": "Doch diese fünf Fähigkeiten sind bei ihr schwach ausgeprägt: Vertrauen, Energie, Achtsamkeit, Versenkung und Weisheit. ",
