--- a/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag21.1_translation-de-sabbamitta.json
@@ -68,7 +68,7 @@
   "thag21.1:16.3": "Wende dich von dem Zeichen ab, ",
   "thag21.1:16.4": "das anziehend ist und Wollust erregt. ",
   "thag21.1:17.1": "Meditiere mit geeintem und gesammeltem Geist ",
-  "thag21.1:17.2": "über die unattraktive Natur des Körpers. ",
+  "thag21.1:17.2": "über das Abstoßende am Körper. ",
   "thag21.1:17.3": "Versenke die Achtsamkeit im Körper ",
   "thag21.1:17.4": "und sei zutiefst ernüchtert. ",
   "thag21.1:18.1": "Meditiere über das Merkmalslose, ",
