--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -44,7 +44,7 @@
   "mn4:14.4": "Je ne suis pas peureux… › ",
   "mn4:15.2": "‹ Il y a des ascètes et des brahmanes qui désir possessions, honneur et popularité… ",
   "mn4:15.4": "J’ai peu de désir… › ",
-  "mn4:16.2": "‹ Il y a des ascètes et des brahmanes paresseux et manquant d’énergie... ",
+  "mn4:16.2": "‹ Il y a des ascètes et des brahmanes paresseux et manquant d’énergie… ",
   "mn4:16.4": "Je suis énergique... › ",
   "mn4:17.2": "‹ Il y a des ascètes et des brahmanes distraits et dépourvu d’attention… ",
   "mn4:17.4": "Je suis attentif… › ",
