Translations by noeismet to translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json

--- a/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
+++ b/translation/fr/noeismet/sutta/mn/mn4_translation-fr-noeismet.json
@@ -45,7 +45,7 @@
   "mn4:15.2": "‹ Il y a des ascètes et des brahmanes qui désir possessions, honneur et popularité… ",
   "mn4:15.4": "J’ai peu de désir… › ",
   "mn4:16.2": "‹ Il y a des ascètes et des brahmanes paresseux et manquant d’énergie… ",
-  "mn4:16.4": "Je suis énergique... › ",
+  "mn4:16.4": "Je suis énergique… › ",
   "mn4:17.2": "‹ Il y a des ascètes et des brahmanes distraits et dépourvu d’attention… ",
   "mn4:17.4": "Je suis attentif… › ",
   "mn4:18.2": "‹ Il y a des ascètes et des brahmanes qui manquent de méditation profonde, avec des esprits égarés… ",
