--- a/translation/de/sabbamitta/sutta/an/an1/an1.11-20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.11-20_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "an1.11:0.1": "Nummerierte Lehrreden 1.11–20 ",
   "an1.11:0.2": "2. Das Kapitel über das Aufgeben der Hindernisse ",
   "an1.11:1.0": "11 ",
-  "an1.11:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das sinnliches Begehren so entstehen lässt oder es wachsen und zunehmen lässt, wenn es entstanden ist, wie das Merkmal des Anziehenden. ",
+  "an1.11:1.1": "„Mönche und Nonnen, ich sehe kein einziges Ding, das sinnliches Begehren so entstehen lässt oder es wachsen und zunehmen lässt, wenn es entstanden ist, wie das Merkmal des Schönen. ",
   "an1.11:1.2": "Wenn man den Geist für das Merkmal des Anziehenden oberflächlich gebraucht, entsteht sinnliches Begehren, und wenn es entstanden ist, wächst es und nimmt zu.“ ",
   "an1.11:1.3": " ",
   "an1.12:1.0": "12 ",
