--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.51_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "sn46.51:1.2": "„Mönche und Nonnen, ich will euch lehren, was die fünf Hindernisse und die sieben Faktoren des Erwachens nährt und was sie aushungert. ",
   "sn46.51:1.3": "Hört zu … ",
   "sn46.51:1.4": "Und was nährt das Entstehen von sinnlichem Begehren oder lässt es, wenn es entstanden ist, wachsen und zunehmen? ",
-  "sn46.51:1.5": "Es gibt das Merkmal des Anziehenden. ",
+  "sn46.51:1.5": "Es gibt das Merkmal des Schönen. ",
   "sn46.51:1.6": "Häufig dafür den Geist oberflächlich zu gebrauchen, ",
   "sn46.51:1.7": "nährt das Entstehen von sinnlichem Begehren oder lässt es, wenn es entstanden ist, wachsen und zunehmen. ",
   "sn46.51:2.1": "Und was nährt das Entstehen von bösem Willen oder lässt ihn, wenn er entstanden ist, wachsen und zunehmen? ",
