Publishing translations for translation/de/site

--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -458,7 +458,7 @@
   "an-name:457.an4-patipadavagga": "Das Kapitel über die Übung ",
   "an-name:458.an4.161": "Kurz ",
   "an-name:459.an4.162": "Ausführlich ",
-  "an-name:460.an4.163": "Unattraktiv ",
+  "an-name:460.an4.163": "Abstoßend ",
   "an-name:461.an4.164": "Geduldig (1) ",
   "an-name:462.an4.165": "Geduldig (2) ",
   "an-name:463.an4.166": "Beide ",
@@ -616,7 +616,7 @@
   "an-name:615.an5.23": "Verunreinigungen ",
   "an-name:616.an5.24": "Unmoralisch ",
   "an-name:617.an5.25": "Getragen ",
-  "an-name:618.an5.26": "Gelegenheiten zur Befreiung ",
+  "an-name:618.an5.26": "Gelegenheiten für Freiheit ",
   "an-name:619.an5.27": "Versenkung ",
   "an-name:620.an5.28": "Mit fünf Faktoren ",
   "an-name:621.an5.29": "Auf- und Abgehen ",
@@ -774,7 +774,7 @@
   "an-name:773.an5.164": "Gemeinsame Lebensweise ",
   "an-name:774.an5.165": "Fragen stellen ",
   "an-name:775.an5.166": "Aufhören ",
-  "an-name:776.an5.167": "Anklage ",
+  "an-name:776.an5.167": " Anklage ",
   "an-name:777.an5.168": "Sittliches Verhalten  ",
   "an-name:778.an5.169": "Von flinkem Verstand ",
   "an-name:779.an5.170": "Mit Bhaddaji ",
