Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -1,4 +1,5 @@
 {
   "iti110:2.1": "A un cercatore in cammino appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male. ",
-  "iti110:2.2": "Se quel cercatore li tollera e non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, "
+  "iti110:2.2": "Se quel cercatore li tollera e non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, ",
+  "iti110:2.3": "allora quel cercatore in cammino in tale stato è detto un indolente, "
 }
