Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -4,5 +4,6 @@
   "iti110:2.3": "allora quel cercatore in cammino in tale stato è detto un indolente, senza timore, sempre costantemente pigro, e con poca forza. ",
   "iti110:3.1": "sta in piedi, ",
   "iti110:4.1": "sta seduto, ",
-  "iti110:5.1": "o sta sdraiato, a un cercatore appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male. "
+  "iti110:5.1": "o sta sdraiato, a un cercatore appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male. ",
+  "iti110:5.2": "Se quel cercatore li tollera e non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, "
 }
