--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti110:3.1": "sta in piedi, ",
   "iti110:4.1": "sta seduto, ",
   "iti110:5.1": "o sta sdraiato, a un cercatore appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male. ",
-  "iti110:5.2": "Se quel cercatore li tollera e non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, "
+  "iti110:5.2": "Se quel cercatore li tollera e non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, ",
+  "iti110:5.3": "allora quel cercatore, mentre cammina, sta in piedi, si siede o si sdraia in tale stato è detto un indolente, senza timore, sempre costantemente pigro, e con poca forza. "
 }
