--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti110:2.1": "Se mentre cammina, ",
   "iti110:2.2": "",
-  "iti110:2.3": "allora quel cercatore in cammino in tale stato è detto un indolente, senza timore, sempre costantemente pigro, e con poca forza. ",
+  "iti110:2.3": "",
   "iti110:3.1": "sta in piedi, ",
   "iti110:4.1": "sta seduto, ",
   "iti110:5.1": "o sta sdraiato, a un cercatore appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male. ",
