--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti110:5.2": "Se quel cercatore li tollera e non li lascia andare, non li butta fuori, non li porta a termine, non li oblitera, ",
   "iti110:5.3": "allora quel cercatore, mentre cammina, sta in piedi, si siede o si sdraia in tale stato è detto uno indolente, senza timore, sempre costantemente pigro, e con poca forza. ",
   "iti110:9.3": "allora quel cercatore, mentre cammina, sta in piedi, si siede o si sdraia in tale stato è detto uno zelante, timorato, che sempre costantemente si rinvigorisce, ed è determinato. ",
-  "iti110:10.1": "x "
+  "iti110:10.1": "x ",
+  "iti110:10.2": "x "
 }
