Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -10,5 +10,6 @@
   "iti110:9.3": "allora quel cercatore, mentre cammina, sta in piedi, si siede o si sdraia in tale stato è detto uno zelante, timorato, che sempre costantemente si rinvigorisce, ed è determinato. ",
   "iti110:10.1": "x ",
   "iti110:10.2": "x ",
-  "iti110:10.3": "se pensa un pensiero "
+  "iti110:10.3": "se pensa un pensiero ",
+  "iti110:10.4": "cattivo relativo alla vita laica, "
 }
