Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -11,5 +11,6 @@
   "iti110:10.1": "x ",
   "iti110:10.2": "x ",
   "iti110:10.3": "se pensa un pensiero ",
-  "iti110:10.4": "cattivo relativo alla vita laica, "
+  "iti110:10.4": "cattivo relativo alla vita laica, ",
+  "iti110:11.1": "praticando per la cattiva strada, "
 }
