Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -12,5 +12,6 @@
   "iti110:10.2": "x ",
   "iti110:10.3": "se pensa un pensiero ",
   "iti110:10.4": "cattivo relativo alla vita laica, ",
-  "iti110:11.1": "praticando per la cattiva strada, "
+  "iti110:11.1": "praticando per la cattiva strada, ",
+  "iti110:11.2": "infatuato/fissato con cose che portano alla fissazione??? "
 }
