Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -16,5 +16,6 @@
   "iti110:11.2": "infatuato/fissato con cose che portano alla fissazione??? ",
   "iti110:11.3": "x ",
   "iti110:11.4": "x ",
-  "iti110:12.1": "Sia in cammino che in piedi, "
+  "iti110:12.1": "Sia in cammino che in piedi, ",
+  "iti110:12.2": "seduto o sdraiato "
 }
