Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -20,5 +20,6 @@
   "iti110:12.2": "seduto o sdraiato ",
   "iti110:12.3": "se pensa un pensiero ",
   "iti110:12.4": "devoto al calmare i pensieri ",
-  "iti110:12.5": "questo tipo di cercatore è capace "
+  "iti110:12.5": "questo tipo di cercatore è capace ",
+  "iti110:12.6": "di ottenere la suprema illuminazione. "
 }
