--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti110:11.4": "x ",
   "iti110:12.1": "Sia in cammino che in piedi, ",
   "iti110:12.2": "seduto o sdraiato ",
-  "iti110:12.3": "se pensa un pensiero ",
+  "iti110:12.3": "avendo calmato il pensiero, ",
   "iti110:12.4": "devoto al calmare i pensieri ",
   "iti110:12.5": "questo tipo di cercatore è capace ",
   "iti110:12.6": "di ottenere la suprema illuminazione. "
