--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti110:11.2": "infatuato/fissato con cose che portano alla fissazione??? ",
   "iti110:11.3": "x ",
   "iti110:11.4": "x ",
-  "iti110:12.1": "Sia in cammino che in piedi, ",
+  "iti110:12.1": "Chiunque sia in cammino che in piedi, ",
   "iti110:12.2": "seduto o sdraiato ",
   "iti110:12.3": "avendo raccolto il pensiero, ",
   "iti110:12.4": "devoto al calmare i pensieri ",
