--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti110:2.1": "Se a un cercatore appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male, mentre cammina, ",
+  "iti110:2.1": "Se mentre cammina, ",
   "iti110:2.2": "",
   "iti110:2.3": "",
   "iti110:3.1": "sta in piedi, ",
