--- a/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti110_translation-it-soma.json
@@ -10,6 +10,7 @@
   "iti110:6.1": "Se mentre cammina, ",
   "iti110:7.1": "sta in piedi, ",
   "iti110:8.1": "sta seduto, ",
+  "iti110:9.1": "o sta sdraiato da sveglio, a un cercatore appaiono pensieri sensuali, pensieri di paura, e pensieri di fare del male, ",
   "iti110:9.3": "allora quel cercatore, mentre cammina, sta in piedi, si siede o si sdraia in tale stato è detto uno zelante, timorato, che sempre costantemente si rinvigorisce, ed è determinato. ",
   "iti110:10.1": "x ",
   "iti110:10.2": "x ",
