Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "iti111:2.1": "Cercatori, vivete con perfetta moralità, con perfetta pātimokkha; vivete temperati e moderati dalla pātimokkha, con una condotta e sistemazione perfetta, vedendo il pericolo negli errori più piccoli, allenatevi (esercita/pratica) avendo preso i precetti. *** "
+  "iti111:2.1": "Cercatori, vivete con perfetta moralità, con perfetta pātimokkha; vivete temperati e moderati dalla pātimokkha, con una condotta e sistemazione perfetta, vedendo il pericolo negli errori più piccoli, allenatevi (esercita/pratica) avendo preso i precetti. *** ",
+  "iti111:3.1": "Quando vivrete con perfetta moralità, con perfetta pātimokkha; vivrete temperati e moderati dalla pātimokkha, con una condotta e sistemazione perfetta, vedendo il pericolo negli errori più piccoli, allenatevi (esercita/pratica) avendo preso i precetti. *** , che altro dovreste fare di superiore? "
 }
