--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -3,5 +3,6 @@
   "iti111:3.1": "Quando vivrete con perfetta moralità, con perfetta pātimokkha; vivrete temperati e moderati dalla pātimokkha, con una condotta e sistemazione perfetta, vedendo il pericolo negli errori più piccoli, allenatevi (esercita/pratica) avendo preso i precetti. *** , che altro dovreste fare di superiore? ",
   "iti111:4.1": "A un cercatore che cammina che non è senza cupidigia e avversione,  torpore, agitazione e rimorso, o dubbio, ma è strenuo, attivo, la consapevolezza è presente senza confusione, il corpo calmo senza agitazione, con la mente raccolta e unificata. ",
   "iti111:4.2": "EDIT ",
-  "iti111:8.1": "controllato mentre cammina, controllato mentre sta in piedi, "
+  "iti111:8.1": "controllato mentre cammina, controllato mentre sta in piedi, ",
+  "iti111:8.2": "controllato mentre si siede, controllato mentre si sdraia "
 }
