--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti111:4.2": "EDIT ",
   "iti111:8.1": "controllato mentre cammina, controllato mentre sta in piedi, ",
   "iti111:8.2": "controllato mentre si siede, controllato mentre si sdraia. ",
-  "iti111:8.3": "controllato mentre si piega, "
+  "iti111:8.3": "controllato mentre si piega, ",
+  "iti111:8.4": "controllato mentre si allunga "
 }
