Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -7,5 +7,6 @@
   "iti111:8.2": "controllato mentre si siede, controllato mentre si sdraia. ",
   "iti111:8.3": "controllato mentre si piega, ",
   "iti111:8.4": "controllato mentre si allunga ",
-  "iti111:9.1": "Sopra, in mezzo, sotto, "
+  "iti111:9.1": "Sopra, in mezzo, sotto, ",
+  "iti111:9.2": "fino a dove arriva la terra "
 }
