--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti111:8.3": "controllato mentre si piega, ",
   "iti111:8.4": "controllato mentre si allunga ",
   "iti111:9.1": "Sopra, in mezzo, sotto, ",
-  "iti111:9.2": "fino a dove arriva la terra "
+  "iti111:9.2": "fino a dove arriva la terra ",
+  "iti111:9.3": "esaminando il Dhamma, "
 }
