--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -10,5 +10,6 @@
   "iti111:9.1": "Sopra, in mezzo, sotto, ",
   "iti111:9.2": "fino a dove arriva la terra ",
   "iti111:9.3": "esaminando il Dhamma, ",
-  "iti111:9.4": "l’ascesa e la caduta degli aggregati. ** "
+  "iti111:9.4": "l’ascesa e la caduta degli aggregati. ** ",
+  "iti111:10.1": "Quindi, vivendo zelante "
 }
