--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -14,5 +14,6 @@
   "iti111:10.1": "Quindi, vivendo zelante ",
   "iti111:10.2": "in pace, non arrogante ",
   "iti111:10.3": "alla corretta tranquillità del cuore ",
-  "iti111:10.4": "si allena sempre consapevole "
+  "iti111:10.4": "si allena sempre consapevole ",
+  "iti111:10.5": "sempre determinato/resoluto "
 }
