Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -15,5 +15,6 @@
   "iti111:10.2": "in pace, non arrogante ",
   "iti111:10.3": "alla corretta tranquillità del cuore ",
   "iti111:10.4": "si allena sempre consapevole ",
-  "iti111:10.5": "sempre determinato/resoluto "
+  "iti111:10.5": "sempre determinato/resoluto ",
+  "iti111:10.6": "è chiamato uno di tale qualità. "
 }
