--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -1,3 +1,4 @@
 {
-  "iti112:2.1": "Il mondo, è completamente compreso dal Buddha. "
+  "iti112:2.1": "Il mondo, è completamente compreso dal Buddha. ",
+  "iti112:2.2": "Il Buddha è sottratto al giogo del mondo "
 }
