--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -1,4 +1,5 @@
 {
   "iti112:2.1": "Il mondo, è completamente compreso dal Buddha. ",
-  "iti112:2.2": "Il Buddha è sottratto al giogo del mondo "
+  "iti112:2.2": "Il Buddha è sottratto al giogo del mondo ",
+  "iti112:2.3": "L’origine del mondo, è completamente compreso dal Buddha. "
 }
