Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -2,5 +2,6 @@
   "iti112:2.1": "Il mondo, è completamente compreso dal Buddha. ",
   "iti112:2.2": "Il Buddha è sottratto al giogo del mondo ",
   "iti112:2.3": "L’origine del mondo, è completamente compreso dal Buddha. ",
-  "iti112:2.4": "Il Buddha ha completamente rimosso/abbandonato l’origine del mondo. "
+  "iti112:2.4": "Il Buddha ha completamente rimosso/abbandonato l’origine del mondo. ",
+  "iti112:2.5": "La fine del mondo, è completamente compreso dal Buddha. "
 }
