--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -4,5 +4,5 @@
   "iti112:2.3": "L’origine del mondo, è completamente compreso dal Buddha. ",
   "iti112:2.4": "Il Buddha ha completamente rimosso/abbandonato l’origine del mondo. ",
   "iti112:2.5": "La fine del mondo, è completamente compreso dal Buddha. ",
-  "iti112:2.6": "Il Buddha ha avuto esperienza diretta della fine del mondo. "
+  "iti112:2.6": "Il Buddha ha realizzato di persona la fine del mondo. "
 }
