Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -5,5 +5,6 @@
   "iti112:2.4": "Il Buddha ha completamente rimosso/abbandonato l’origine del mondo. ",
   "iti112:2.5": "La fine del mondo, è completamente compreso dal Buddha. ",
   "iti112:2.6": "Il Buddha ha visto di persona la fine del mondo. ",
-  "iti112:2.7": "La via che conduce alla fine del mondo, è completamente compreso dal Buddha. "
+  "iti112:2.7": "La via che conduce alla fine del mondo, è completamente compreso dal Buddha. ",
+  "iti112:2.8": "Il Buddha ha portato a compimento la via che conduce alla fine del mondo. "
 }
