Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -8,5 +8,6 @@
   "iti112:2.7": "La via che conduce alla fine del mondo, è completamente compreso dal Buddha. ",
   "iti112:2.8": "Il Buddha ha portato a compimento la via che conduce alla fine del mondo. ",
   "iti112:3.1": "È per via di questa perfetta conoscenza nel Buddha che ha visto sentito toccato raggiunto cercato riflettuto con la mente qualunque cosa di questo mondo con i suoi deva, Māra, Brahma, contemplativi e bramini, gente, dei e umani, ",
-  "iti112:3.2": "che si chiama Buddha. "
+  "iti112:3.2": "che si chiama Buddha. ",
+  "iti112:4.1": "Nella notte il Buddha ha realizzato la perfetta suprema illuminazione, poiché nella notte "
 }
