Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -16,5 +16,6 @@
   "iti112:5.3": "x ",
   "iti112:6.1": "l’Altissimo, il Vincitore, l’Invincibile, l’Onnisciente, l’Onnipotente in questo mondo con i suoi deva, Māra, Brahma, contemplativi e bramini, gente, dei e umani, ",
   "iti112:6.2": "x ",
-  "iti112:7.1": "Conoscendo direttamente tutto il mondo, "
+  "iti112:7.1": "Conoscendo direttamente tutto il mondo, ",
+  "iti112:7.2": "tutto il mondo così com’è "
 }
