Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -18,5 +18,6 @@
   "iti112:6.2": "x ",
   "iti112:7.1": "Conoscendo direttamente tutto il mondo, ",
   "iti112:7.2": "tutto il mondo così com’è ",
-  "iti112:7.3": "Sottratta a ogni giogo del mondo, "
+  "iti112:7.3": "Sottratta a ogni giogo del mondo, ",
+  "iti112:7.4": "non è attratto da tutto il mondo.?? "
 }
